--- a/.vscode/.prettierrc.json
+++ b/.vscode/.prettierrc.json
@@ -1,12 +1,23 @@
-{ 
-  "printWidth": 80, 
-  "tabWidth": 2, 
-  "useTabs": false, 
-  "semi": true, 
-  "singleQuote": true, 
-  "trailingComma": "all", 
-  "bracketSpacing": true, 
-  "jsxBracketSameLine": false, 
-  "arrowParens": "avoid", 
-  "proseWrap": "always" 
+
+{
+  "liveSassCompile.settings.formats":[
+     {
+         "format": "expanded",
+         "extensionName": ".css",
+         "savePath": "/css"
+     },
+     {
+         "extensionName": ".min.css",
+         "format": "compressed",
+         "savePath": "/dist/css"
+     }
+ ],
+ "liveSassCompile.settings.excludeList": [
+    "**/node_modules/**",
+    ".vscode/**"
+ ],
+ "liveSassCompile.settings.generateMap": true,
+ "liveSassCompile.settings.autoprefix": [
+     "defaults"
+ ]
 }
